--- a/app/build.gradle
+++ b/app/build.gradle
@@ -116,3 +116,6 @@ dependencies {
     }
     compile "com.android.support:support-v4:20.+"
 }
+dependencies {
+    compile 'com.android.support:appcompat-v7:19.+'
+}
