--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,16 +21,14 @@ android {
     }
 }
 
-def requireFileInDirectory(String directory, String file)
-{
-    if(fileTree(dir: directory, include: '**/'+file).isEmpty()) {
+def requireFileInDirectory(String directory, String file) {
+    if (fileTree(dir: directory, include: '**/' + file).isEmpty()) {
         throw new GradleException('Not found ' + file + ' in ' + directory + ' directory')
     }
 }
 
-def sdkCopyPkcs11()
-{
-    if(fileTree(dir: 'libs', include: '**/'+'librtpkcs11ecp.so').isEmpty() && !fileTree(dir: '../../../../../Libs/android/native/pkcs11/', include: 'librtpkcs11ecp.so').isEmpty()) {
+def sdkCopyPkcs11() {
+    if (fileTree(dir: 'libs', include: '**/' + 'librtpkcs11ecp.so').isEmpty() && !fileTree(dir: '../../../../../Libs/android/native/pkcs11/', include: 'librtpkcs11ecp.so').isEmpty()) {
         copy {
             from fileTree(dir: '../../../../../Libs/android/native/pkcs11/', include: 'librtpkcs11ecp.so')
             into 'libs/'
@@ -46,9 +44,9 @@ task extractJniDispatchFromJar {
     }
     copy {
         from filtered
-        into buildDir.getPath()+"/native-libs/"
+        into buildDir.getPath() + "/native-libs/"
     }
-    
+
 }
 
 task prepareNativeLibs() {
@@ -56,29 +54,29 @@ task prepareNativeLibs() {
     requireFileInDirectory('libs', 'librtpkcs11ecp.so')
     copy {
         from fileTree(dir: 'libs', include: '**/*.so')
-        into buildDir.getPath()+'/native-libs/'
+        into buildDir.getPath() + '/native-libs/'
     }
 }
 
 task nativeLibsToJar(type: Zip, description: 'create a jar archive of the native libs', dependsOn: ['prepareNativeLibs', 'extractJniDispatchFromJar']) {
-    requireFileInDirectory(buildDir.getPath()+"/native-libs", 'libjnidispatch.so')
-    requireFileInDirectory(buildDir.getPath()+"/native-libs", 'librtpkcs11ecp.so')
-    destinationDir file(buildDir.getPath()+"/native-libs")
+    requireFileInDirectory(buildDir.getPath() + "/native-libs", 'libjnidispatch.so')
+    requireFileInDirectory(buildDir.getPath() + "/native-libs", 'librtpkcs11ecp.so')
+    destinationDir file(buildDir.getPath() + "/native-libs")
     baseName 'native-libs'
     extension 'jar'
-    from fileTree(dir: buildDir.getPath()+'/native-libs', include: '**/*.so')
+    from fileTree(dir: buildDir.getPath() + '/native-libs', include: '**/*.so')
     into 'lib/armeabi/'
 }
 
 task prepareEclipse(dependsOn: ['prepareNativeLibs', 'extractJniDispatchFromJar']) {
     doLast {
-        requireFileInDirectory(buildDir.getPath()+"/native-libs", 'libjnidispatch.so')
-        requireFileInDirectory(buildDir.getPath()+"/native-libs", 'librtpkcs11ecp.so')
+        requireFileInDirectory(buildDir.getPath() + "/native-libs", 'libjnidispatch.so')
+        requireFileInDirectory(buildDir.getPath() + "/native-libs", 'librtpkcs11ecp.so')
         if ((new File('../eclipse-project/')).isDirectory()) {
             throw new GradleException('Directory \"eclipse-project\" already exists. Remove directory or run \"gradle clean\" before to create eclipse project once more')
         }
         copy {
-            from fileTree(dir: buildDir.getPath()+'/native-libs/', include: '**/*.so')
+            from fileTree(dir: buildDir.getPath() + '/native-libs/', include: '**/*.so')
             into '../eclipse-project/libs/armeabi/'
         }
         copy {
@@ -100,7 +98,7 @@ task prepareEclipse(dependsOn: ['prepareNativeLibs', 'extractJniDispatchFromJar'
     }
 }
 
-clean{
+clean {
     delete "../eclipse-project"
 }
 
@@ -116,5 +114,8 @@ dependencies {
     compile files("$buildDir/native-libs/native-libs.jar") {
         builtBy 'nativeLibsToJar'
     }
-    compile "com.android.support:support-v4:+"
+    compile "com.android.support:support-v4:20.+"
+}
+dependencies {
+    compile 'com.android.support:appcompat-v7:19.+'
 }
