--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
 
     <application
         android:allowBackup="true"
-        android:label="@string/app_name" >
+        android:label="@string/app_name"
+        android:icon="@drawable/icon" >
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
