--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,6 +108,7 @@ tasks.withType(Compile) {
 
 dependencies {
     compile fileTree(dir: "libs", include: "*.jar")
+    compile group: 'com.madgag.spongycastle', name: 'core', version: '1.51.0.0'
 }
 
 dependencies {
