Fix for building with latest Gradle (2.2.1) and Android Studio (1.0.2).

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:0.12.+"
+        classpath "com.android.tools.build:gradle:1.0.0+"
     }
 }
 
@@ -102,7 +102,7 @@ clean {
     delete "../eclipse-project"
 }
 
-tasks.withType(Compile) {
+tasks.withType(JavaCompile) {
     compileTask -> compileTask.dependsOn(nativeLibsToJar)
 }
 
