Add 2012 GOST support
Fix README files.
Add signature support with 2012 gost.
Fix battery charge indication.

Resolve: MOB-125

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
                 android:value="ru.rutoken.demobank.MainActivity" />
         </activity>
         <activity
-            android:name=".PaymentsActivity"
+            android:name=".payment.PaymentsActivity"
             android:parentActivityName=".LoginActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
