--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,11 +41,9 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar", "*.aar"])
-    implementation 'com.madgag.spongycastle:pkix:1.54.0.0'
+    implementation 'org.bouncycastle:bcpkix-jdk15on:1.61'
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'net.java.dev.jna:jna:4.5.1@aar'
-    //TODO download pkcs11jna.jar dependency
-    //TODO download librtpkcs11ecp.so dependency
 }
 
 def requireFileInDirectory(String directory, String file) {
