--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
+    ndkVersion "21.0.6113669"
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionName "1.1.2"
         versionCode 12
         ndk {
@@ -42,8 +43,9 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar", "*.aar"])
     implementation 'org.bouncycastle:bcpkix-jdk15on:1.61'
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'net.java.dev.jna:jna:4.5.1@aar'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
+    implementation 'net.java.dev.jna:jna:5.4.0@aar'
 }
 
 def requireFileInDirectory(String directory, String file) {
