Add NFC tokens support to TokenManager
Replace multiple maps with single set.

Remove reflection calls.

Add TokenInfoLoading state, its independent from old state with
similar name, which now is called TokenAdded.

Extend TokenManager API to handle conditions when a NFC card is out of range.

Remove R0W0 States. Those states were used to handle events
that come in wrong order or in unexpected time, for example from a hanged thread.
Now we removed that possibility.

Add logging.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation 'org.bouncycastle:bcpkix-jdk15on:1.61'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
+    implementation 'com.google.guava:guava:28.0-android'
     implementation 'net.java.dev.jna:jna:5.4.0@aar'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
