--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:icon="@drawable/icon"
+        android:icon="@mipmap/ic_launcher"
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
