--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-common-java8:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.browser:browser:1.3.0'
     implementation 'com.google.guava:guava:28.0-android'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'net.java.dev.jna:jna:5.7.0@aar'
