--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 31
     ndkVersion "21.0.6113669"
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionName "1.4.1"
         versionCode 17
         ndk {
@@ -74,14 +74,11 @@ def copyJniLibs(String arch, String jniArch) {
     def jniLibs = "./src/main/jniLibs/$jniArch"
 
     if (new File("$rootDir/external").exists()) {
-        copyFile('librtpcsc.so', "../external/pcsc-android/android-$arch-clang/lib", jniLibs)
         copyFile('librtpkcs11ecp.so', "../external/pkcs11ecp/android-$arch/lib", jniLibs)
     } else { // SDK path
-        copyFile('librtpcsc.so', "../../../../pcsc/android-$arch/lib", jniLibs)
         copyFile('librtpkcs11ecp.so', "../../../android-$arch/lib", jniLibs)
     }
 
-    requireFileInDirectory(jniLibs, 'librtpcsc.so')
     requireFileInDirectory(jniLibs, 'librtpkcs11ecp.so')
 }
 
@@ -91,12 +88,12 @@ preBuild.doLast {
 
     if (new File("$rootDir/external").exists()) {
         copyFile('pkcs11jna*.jar', '../external/pkcs11jna/java', 'libs')
-        copyFile('rtserviceconnection*.aar', '../external/rtserviceconnection/java/', 'libs')
+        copyFile('rtpcsc*.aar', '../external/rtpcsc/java/', 'libs')
     } else { // SDK path
         copyFile('pkcs11jna*.jar', "../../../../../../java/samples/pkcs11/lib", "libs")
-        copyFile('rtserviceconnection*.aar', "../../../../libs", "libs")
+        copyFile('rtpcsc*.aar', "../../../../pcsc", "libs")
     }
 
     requireFileInDirectory('libs', 'pkcs11jna*.jar')
-    requireFileInDirectory('libs', 'rtserviceconnection*.aar')
+    requireFileInDirectory('libs', 'rtpcsc*.aar')
 }
