--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.BLUETOOTH" />
 
     <application
+        android:name=".ui.application.DemobankApplication"
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true"
@@ -12,6 +13,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".ui.main.MainActivity"
+            android:exported="true"
             android:label="@string/app_name"
             android:launchMode="singleTask">
             <intent-filter>
@@ -22,6 +24,7 @@
         </activity>
         <activity
             android:name=".ui.login.LoginActivity"
+            android:exported="false"
             android:parentActivityName=".ui.main.MainActivity"
             android:windowSoftInputMode="stateVisible">
             <meta-data
@@ -30,7 +33,8 @@
         </activity>
         <activity
             android:name=".ui.payment.PaymentsActivity"
-            android:parentActivityName=".ui.login.LoginActivity">
+            android:exported="false"
+            android:parentActivityName=".ui.login.LoginActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="ru.rutoken.demobank.ui.login.LoginActivity" />
