--- a/external.config
+++ b/external.config
@@ -1,4 +1,3 @@
-pkcs11ecp 5f18b59d73e9dd6000c5b2ba2d9231fa405a7434
+pkcs11ecp bc612d077ec76bf56bd3eec1dd437cf4eb08539c
 pkcs11jna b52a19f625468e330eeae6dfcb43012bdb54fe2d
-pcsc-android 127b0dabe1ccad8092535dd7b7956554e5b8df6d
-rtserviceconnection fc30a90705ebdc037fc8eb5068c85910088b5c81
+rtpcsc 7b4015d6db0a3c36cfc3d0df1b1fe41435e66ea7
