--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'net.java.dev.jna:jna:5.7.0@aar'
     implementation 'org.bouncycastle:bcpkix-jdk15on:1.61'
-
+    implementation 'ru.rutoken:pkcs11jna:3.3.0@jar'
 }
 
 def requireFileInDirectory(String directory, String file) {
@@ -87,13 +87,10 @@ preBuild.doLast {
     copyJniLibs('arm64', 'arm64-v8a')
 
     if (new File("$rootDir/external").exists()) {
-        copyFile('pkcs11jna*.jar', '../external/pkcs11jna/java', 'libs')
         copyFile('rtpcsc*.aar', '../external/rtpcsc/java/', 'libs')
     } else { // SDK path
-        copyFile('pkcs11jna*.jar', "../../../../../../java/samples/pkcs11/lib", "libs")
         copyFile('rtpcsc*.aar', "../../../../pcsc", "libs")
     }
 
-    requireFileInDirectory('libs', 'pkcs11jna*.jar')
     requireFileInDirectory('libs', 'rtpcsc*.aar')
 }
