--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".ui.main.MainActivity"
+            android:exported="true"
             android:label="@string/app_name"
             android:launchMode="singleTask">
             <intent-filter>
@@ -22,6 +23,7 @@
         </activity>
         <activity
             android:name=".ui.login.LoginActivity"
+            android:exported="false"
             android:parentActivityName=".ui.main.MainActivity"
             android:windowSoftInputMode="stateVisible">
             <meta-data
@@ -30,8 +32,9 @@
         </activity>
         <activity
             android:name=".ui.payment.PaymentsActivity"
-            android:parentActivityName=".ui.login.LoginActivity">
-            <meta-data
+            android:exported="false"
+            android:parentActivityName=".ui.login.LoginActivity" >
+        <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="ru.rutoken.demobank.ui.login.LoginActivity" />
         </activity>
