Fix deprecation warnings
* Add queries with Control Panel package name in manifest, because apps
that target Android 11 cannot query or interact with other installed
apps by default;
* Change PackageManager#getInstalledApplications to
PackageManager#getPackageInfo method call on devices with SDK version R
and upper;
* Remove deprecated package parameter from manifest and add namespace in
build.gradle instead;
* Change deprecated compileSdkVersion, minSdkVersion and targetSdkVersion
to compileSdk, minSdk, targetSdk in build.gradle.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 33
+    namespace "ru.rutoken.demobank"
+    compileSdk 33
     ndkVersion "21.0.6113669"
     defaultConfig {
-        minSdkVersion 21
-        targetSdkVersion 33
+        minSdk 21
+        targetSdk 33
         versionName "1.5.0"
         versionCode 18
         ndk {
