--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ru.rutoken.demobank">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.BLUETOOTH" />
+
+    <queries>
+        <package android:name="ru.rutoken" />
+    </queries>
 
     <application
         android:name=".ui.application.DemobankApplication"
         android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:icon="@mipmap/ic_launcher"
         android:theme="@style/AppTheme">
         <activity
             android:name=".ui.main.MainActivity"
@@ -34,7 +37,7 @@
         <activity
             android:name=".ui.payment.PaymentsActivity"
             android:exported="false"
-            android:parentActivityName=".ui.login.LoginActivity" >
+            android:parentActivityName=".ui.login.LoginActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="ru.rutoken.demobank.ui.login.LoginActivity" />
